# Markdown-Note-Taking-App

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  manage.py  pyproject.toml  pytest.ini  requirements.txt
backend/notes/: models.py  serializers.py  tests.py  urls.py  views.py
backend/notes/migrations/: 0001_initial.py
backend/notes/utils/: grammar_utils.py  markdown_utils.py
backend/notes_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/users/: serializers.py  tests.py  views.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: axios.js
frontend/src/pages/: Login.jsx  NoteList.jsx  Register.jsx
